--- a/web/application/admin/view/type/create.html
+++ b/web/application/admin/view/type/create.html
@@ -51,10 +51,18 @@
                                     </div>
                                 </div>
                                 <div class="form-inline form-group">
-                                    <label  class="col-md-2 pull-right">图标</label>
+                                    <label  class="col-md-2 pull-right">APP/H5图标</label>
                                     <div>
                                         <input id="add-file" name="file" type="file" data-show-caption="true">
                                         <input  type="hidden" name="path" id="add-upload-file"  value="" />
+                                        <p class="help-block2">支持jpg、jpeg、png格式，大小不超过2.0M</p>
+                                    </div>
+                                </div>
+                                <div class="form-inline form-group">
+                                    <label  class="col-md-2 pull-right">Web图标</label>
+                                    <div>
+                                        <input id="add-web-file" name="file" type="file" data-show-caption="true">
+                                        <input  type="hidden" name="web_path" id="add-web-upload-file"  value="" />
                                         <p class="help-block2">支持jpg、jpeg、png格式，大小不超过2.0M</p>
                                     </div>
                                 </div>
@@ -126,6 +134,35 @@
         $('#add-upload-file').val('');
     });
 
+    $("#add-web-file").fileinput({
+        language: 'zh', //设置语言
+        uploadUrl: '?s=admin/file/upload',  //上传地址
+        showUpload: true, //是否显示上传按钮
+        showRemove:true,
+        dropZoneEnabled: false,
+        showCaption: true,//是否显示标题
+        allowedPreviewTypes: ['image'],
+        allowedFileTypes: ['image'],
+        allowedFileExtensions:  ['jpg', 'png'],
+        maxFileSize : 2048,
+        maxFileCount: 1,
+        uploadExtraData: function(previewId, index) {   //额外参数的关键点
+            var obj = {};
+            obj.type = 'type_icon';
+            return obj;
+        }
+    });
+    $('#add-web-file').on("fileuploaded", function(event, data) {
+        if(data.response) {
+            $('#add-web-upload-file').val(data.response.data.filename);
+            $('#add-web-upload-file').closest('.form-group').removeClass('has-error');
+            $('#add-web-upload-file').closest('.form-group').find('.help-block').hide();
+        }
+    });
+    $('#add-web-file').on('fileclear', function(event, id) {
+        $('#add-web-upload-file').val('');
+    });
+
     $("#add-form").bootstrapValidator({
         excluded:[":disabled"],
         live: 'disabled',
@@ -145,6 +182,14 @@
                 }
             },
             path:{
+                message: 'The path is not valid',
+                validators: {
+                    notEmpty: {
+                        message: '请选择图标'
+                    },
+                }
+            },
+            web_path:{
                 message: 'The path is not valid',
                 validators: {
                     notEmpty: {
