--- a/web/application/admin/view/type/edit.html
+++ b/web/application/admin/view/type/edit.html
@@ -51,10 +51,18 @@
                                     </div>
                                 </div>
                                 <div class="form-inline form-group">
-                                    <label  class="col-md-2 pull-right">图标:</label>
+                                    <label  class="col-md-2 pull-right">APP/H5图标:</label>
                                     <div class="">
                                         <input id="edit-file" name="file" type="file" data-show-caption="true">
                                         <input  type="hidden" name="path" id="edit-upload-file"  value="{$row.path}"  data-path="{$preview_path}"/>
+                                        <p class="help-block">支持jpg、jpeg、png格式，大小不超过2.0M</p>
+                                    </div>
+                                </div>
+                                <div class="form-inline form-group">
+                                    <label  class="col-md-2 pull-right">Web图标:</label>
+                                    <div class="">
+                                        <input id="edit-web-file" name="file" type="file" data-show-caption="true">
+                                        <input  type="hidden" name="web_path" id="edit-web-upload-file"  value="{$row.web_path}"  data-path="{$preview_web_path}"/>
                                         <p class="help-block">支持jpg、jpeg、png格式，大小不超过2.0M</p>
                                     </div>
                                 </div>
@@ -130,6 +138,40 @@
     $('#edit-file').on('filecleared', function(event) {
         $('#edit-upload-file').val('');
     });
+
+    $("#edit-web-file").fileinput({
+        language: 'zh', //设置语言
+        uploadUrl: '?s=admin/file/upload',  //上传地址
+        showUpload: true, //是否显示上传按钮
+        showRemove:true,
+        dropZoneEnabled: false,
+        showCaption: true,//是否显示标题
+        allowedPreviewTypes: ['image'],
+        allowedFileTypes: ['image'],
+        allowedFileExtensions:  ['jpg', 'png'],
+        maxFileSize : 2048,
+        maxFileCount: 1,
+        uploadExtraData: function(previewId, index) {   //额外参数的关键点
+            var obj = {};
+            obj.type = 'type_icon';
+            return obj;
+        },
+        initialPreview: [
+            "<img width='150px' height='150px' src='"+imgPath+"' class='file-preview-image' alt='' title=''>"
+        ],
+        previewSettings: {
+            image: {width: "200", height: "200"},
+        },
+    });
+    $('#edit-web-file').on("fileuploaded", function(event, data) {
+        if(data.response){
+            $('#edit-web-upload-file').val(data.response.data.filename);
+        }
+    });
+    $('#edit-web-file').on('filecleared', function(event) {
+        $('#edit-web-upload-file').val('');
+    });
+
 
     $("#edit-form").bootstrapValidator({
         excluded:[":disabled"],
