--- a/web/application/admin/view/goods/edit.html
+++ b/web/application/admin/view/goods/edit.html
@@ -135,6 +135,7 @@
                             </div>
                             <div class="card-footer col-md-offset-2">
                                 <button type="submit" class="btn btn-primary">提交</button>
+                                <small class="submit-tip" style="padding-top: 6px;padding-left: 5px;color: #a94442"></small>
                             </div>
                         </form>
                     </div>
@@ -261,24 +262,21 @@
     function validateSubmit() {
         $('#cover-upload-file').closest('.form-group').removeClass('has-error');
         $('#cover-upload-file').closest('.form-group').find('.help-block').html('');
-        // $('#multi-upload-file').closest('.form-group').removeClass('has-error');
-        // $('#multi-upload-file').closest('.form-group').find('.help-block').html('');
+        $('.submit-tip').html('');
+        var customLength =  $('#custom-container').find('tr').length;
 
-        //  $("#add-form").data('bootstrapValidator').validate();
         var valid = true;
         //图片验证
-        // alert($('#cover-upload-file').val());
         if ($('#cover-upload-file').val() == '') {
             $('#cover-upload-file').closest('.form-group').addClass('has-error');
             $('#cover-upload-file').closest('.form-group').find('.help-block').html('请上传封面图片');
             valid = false;
         }
 
-        // if ($('#multi-upload-file').val() == '') {
-        //     $('#multi-upload-file').closest('.form-group').addClass('has-error');
-        //     $('#multi-upload-file').closest('.form-group').find('.help-block').html('请上传多视角图片');
-        //     valid = false;
-        // }
+        if(customLength == 0){
+            $('.submit-tip').html('请设置商品规格');
+            valid = false;
+        }
 
         var result = $("#edit-form").data('bootstrapValidator').isValid();
         if (result && valid) {
@@ -390,6 +388,8 @@
                                 $('#custom-container').html(shtml);
                             }
 
+                        }else{
+                            $('#standard_container').html('');
                         }
                     }
                 }
