--- a/web/application/admin/view/index_menu/index.html
+++ b/web/application/admin/view/index_menu/index.html
@@ -226,6 +226,8 @@
                                     <div class="col-md-9">
                                         <select name="edit_flag" class="form-control">
                                             <option value="1" >金融服务</option>
+                                            <option value="2" >集众服务</option>
+                                            <option value="3" >集众保理</option>
                                         </select>
                                     </div>
                                 </div>
