--- a/web/application/admin/view/order/index.html
+++ b/web/application/admin/view/order/index.html
@@ -152,8 +152,8 @@
                                         <p>采购商支付:
                                             {if $order.buyerPayInfo}
                                             {foreach name="$order.buyerPayInfo" id="buyer"}
-                                            {$buyer.pay_type == 1 ? '转账' : '汇款'},{$buyer.number},
-                                            {$buyer.pay_type == 1 ? '支付日期:'.substr($buyer.pay_time,0,10): '汇款日期:'.substr($buyer.accept_time,0,10)},
+                                            {$buyer.pay_type == 1 ? '转账' : '汇票'},{$buyer.number},
+                                            {$buyer.pay_type == 1 ? '支付日期:'.substr($buyer.pay_time,0,10): '汇票日期:'.substr($buyer.accept_time,0,10)},
                                             <a target="_blank" href="{$buyer.picture}">【回执照片】</a>
                                             {/foreach}
                                             {else}
@@ -163,8 +163,8 @@
                                         <p>支付至供应商:
                                             {if $order.supplierPayInfo}
                                             {foreach name="$order.supplierPayInfo" id="supplierInfo"}
-                                            {$supplierInfo.pay_type == 3 ? '转账' : '汇款'},{$supplierInfo.number},
-                                            {$supplierInfo.pay_type == 4 ? '支付日期:'.substr($supplierInfo.pay_time,0,10): '汇款日期:'.substr($supplierInfo.accept_time,0,10)}
+                                            {$supplierInfo.pay_type == 3 ? '转账' : '汇票'},{$supplierInfo.number},
+                                            {$supplierInfo.pay_type == 4 ? '支付日期:'.substr($supplierInfo.pay_time,0,10): '汇票日期:'.substr($supplierInfo.accept_time,0,10)}
                                             <a target="_blank" href="{$supplierInfo.picture}">【回执照片】</a>
                                             {/foreach}
                                             {else}
@@ -340,7 +340,7 @@
                                     <label  class="col-md-4">打款类型</label>
                                     <select class="form-control col-md-5" name="pay_type">
                                         <option  value="1">转账</option>
-                                        <option  value="2">汇款</option>
+                                        <option  value="2">汇票</option>
                                     </select>
                                 </div>
                                 <div class="form-group form-inline">
@@ -415,7 +415,7 @@
                                     <label  class="col-md-3 no-padding">打款类型</label>
                                     <select class="form-control col-md-5" name="pay_type">
                                         <option  value="3">转账</option>
-                                        <option  value="4">汇款</option>
+                                        <option  value="4">汇票</option>
                                     </select>
                                 </div>
                                 <div class="form-group form-inline">
