--- a/web/application/admin/view/goods/index.html
+++ b/web/application/admin/view/goods/index.html
@@ -25,7 +25,7 @@
                     <div class="card-header">
                         <h3 class="card-title">商品列表</h3>
                     </div>
-                    <div class="row" style="padding-top: 15px;padding-right: 15px">
+                    <div class="row" style="padding-top: 15px;padding-right: 15px;padding-left: 15px;">
                         <div class="col-md-11">
                             <form class="form-inline" action="{:url()}"  method="get">
                                 <div class="input-group">
