--- a/web/application/admin/view/order/index.html
+++ b/web/application/admin/view/order/index.html
@@ -172,7 +172,7 @@
                                             {/if}
                                         </p>
                                         <p class='spec' >物料规格: 无</p>
-                                        <p class='comment' >买家留言: {$order.buyer_comment}</p>
+                                        <p class='comment' >买家留言: {:htmlspecialchars($order.buyer_comment)}</p>
                                         {if $order.delivery_time > 0} <p>交货日期: {:date('Y-m-d',$order.delivery_time)}</p>{/if}
                                     </div>
 
@@ -192,6 +192,7 @@
                                     <a href="javascript:void(0)" data-id="{$order.id}" class="btn btn-sm btn-primary" data-tag ="1" data-toggle="modal" data-target="#remittance-modal" >收款</a>
                                     <a href="javascript:void(0)" data-id="{$order.id}" class="btn btn-sm btn-danger" data-toggle="modal" data-target="#cancel-modal">取消订单</a>
                                     {elseif $order.state == 3}<!-- 待发货-->
+                                    <a href="javascript:void(0)" data-id="{$order.id}" class="btn btn-sm btn-danger" data-toggle="modal" data-target="#cancel-modal">取消订单</a>
                                     {elseif $order.state == 4}<!-- 订单关闭-->
                                     {elseif $order.state == 6} <!-- 待收货-->
                                     {if $order.service_type == 1}
