--- a/web/application/admin/view/goods/create.html
+++ b/web/application/admin/view/goods/create.html
@@ -535,7 +535,7 @@
                             message: '售价不能为空'
                         },
                         regexp: {
-                            regexp: /^([1-9][0-9]*)+(.[0-9]{1,2})?$/,
+                            regexp: /^[0-9]+([.]{1}[0-9]{1,2})?$/,
                             message: '无效的价格'
                         }
                     }
@@ -546,7 +546,7 @@
                             message: '成本价不能为空'
                         },
                         regexp: {
-                            regexp: /^([1-9][0-9]*)+(.[0-9]{1,2})?$/,
+                            regexp: /^[0-9]+([.]{1}[0-9]{1,2})?$/,
                             message: '无效的价格'
                         }
                     }
