修改个人中心连接

--- a/web/application/admin/view/layout/header.html
+++ b/web/application/admin/view/layout/header.html
@@ -38,7 +38,7 @@
                     <span class="hidden-xs">{:getUserName()}</span>
                 </a>
                 <div class="dropdown-menu dropdown-menu-lg dropdown-menu-right">
-                    <a href="{:url('admin/user/index')}" class="dropdown-item dropdown-footer">个人中心</a>
+                    <a href="{:url('admin/user/editphone')}" class="dropdown-item dropdown-footer">个人中心</a>
                     <a href="{:url('admin/user/logout')}" class="dropdown-item dropdown-footer">退出</a>
                 </div>
             </li>
