--- a/web/application/admin/view/order/index.html
+++ b/web/application/admin/view/order/index.html
@@ -220,8 +220,9 @@
                                     <a href="javascript:void(0)" data-id="{$order.id}" class="btn btn-sm btn-danger" data-toggle="modal" data-target="#service-modal">售后</a>
                                     {/if}
                                     {/if}
-
+                                    {if $order.state != 13 && $order.state != 4}
                                     <a href="javascript:void(0)" data-id="{$order.id}" class="btn btn-sm btn-success" data-toggle="modal" data-target="#adjustPrice-modal">调价</a>
+                                    {/if}
                                 </td>
                             </tr>
                             {/foreach}
@@ -510,6 +511,7 @@
                 </div>
             </div>
             <div class="modal-footer">
+                <span class="pull-left">订单合计：<span id="adjust-total-show">0.00</span> 元</span>
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">关闭</button>
                 <button type="button" class="btn btn-primary" data-id="" id="adjust-price-request">确定</button>
             </div>
@@ -517,19 +519,19 @@
     </div>
 </div>
 {include file="layout/footer" title="$title" keywords="" /}
-
-
 <script id="price-template" type="text/html">
     {{each goods_list as goods}}
     <tr data-id="{{goods.id}}">
         <td><img src="{{ goods.iconPath}}" /> {{goods.title}}</td><td>{{goods.s_info}}</td>
-        <td><input type="number" min="0.0000"  placeholder="0.0000"  name="goods[{{goods.id}}][price]"    value="{{goods.price}}" class="form-control price" /></td>
-        <td><input type="number" min="1" class="form-control quantity"  name="goods[{{goods.id}}][quantity]"   value="{{goods.quantity}}" /></td>
-        <td><input type="text" class="form-control total"  value="{{goods.price * goods.quantity}}"   disabled /></td>
+        <td>
+            <input type="number" min="0.0000"  placeholder="0.0000"  name="goods[{{goods.id}}][price]"   step="0.001"  value="{{goods.price}}" class="form-control price" />
+            <code class="error" style="color:#a94442;"></code>
+        </td>
+        <td><input type="number" min="1" class="form-control quantity"  name="goods[{{goods.id}}][quantity]"  step="1"  value="{{goods.quantity}}" /></td>
+        <td><input type="text" class="form-control total"  value="{{ (goods.price * goods.quantity).toFixed(3)}}"   disabled /></td>
     </tr>
     {{/each}}
 </script>
-
 <script src="__STATIC__/js/plugins/bootstrap-fileinput/js/fileinput.js" type="text/javascript"></script>
 <script type="text/javascript" src="__STATIC__/js/plugins/bootstrapvalidator/js/bootstrapValidator.js"></script>
 <script type="text/javascript" src="__STATIC__/js/template-web.js"></script>
@@ -954,13 +956,35 @@
                     var html = template('price-template',{"goods_list":data.data});
                     //模板渲染
                     $('#adjust-price-body').html(html);
+                    updateTotal();
                 }else{
                     alert('data error');
                 }
             }
         });
     });
+
+
     $('#adjust-price-request').click(function () {
+        //清楚
+        $("#adjust-price-body").find('tr>td').each(function () {
+            $(this).find('code').html('');
+        });
+        var validate = true;
+        //验证数据
+        $("#adjust-price-body").find('tr>td>.price').each(function () {
+            //获取每一个对象
+            var price = $(this).val();
+            var re = /^([0-9]*)+(.[0-9]{1,3})?$/
+            if(!re.test(price)){
+                $(this).closest('td').find('code').html('格式不正确');
+                validate = false;
+            }
+        });
+        if(validate == false){
+            return;
+        }
+
         var id = $(this).data('id');
         if(id < 0){
             return;
@@ -984,6 +1008,15 @@
         //获取当前域值
         var price = $(this).closest('tr').find('.price').val();
         var quantity = $(this).closest('tr').find('.quantity').val();
-        $(this).closest('tr').find('.total').val(price*quantity);
+        var total = (price * quantity).toFixed(3);
+        $(this).closest('tr').find('.total').val(parseFloat(total));
+        updateTotal();
     });
+    var updateTotal = function () {
+        var total = 0;
+        $("#adjust-price-body").find('tr>td>.total').each(function () {
+            total += parseFloat($(this).val());
+        });
+        $("#adjust-total-show").html(total.toFixed(3));
+    }
 </script>
