--- a/web/application/admin/view/order/index.html
+++ b/web/application/admin/view/order/index.html
@@ -106,8 +106,8 @@
                                 <td colspan="4" >
                                     {:date('Y-m-d',$order.add_time)}&nbsp&nbsp;
                                     订单号: {$order.out_id}&nbsp;&nbsp;
-                                    采购商: {$order.buyerName}&nbsp;&nbsp;
-                                    供应商: {$order.supplierName}&nbsp;&nbsp;
+                                    采购商: {:htmlspecialchars($order.buyerName)}&nbsp;&nbsp;
+                                    供应商: {:htmlspecialchars($order.supplierName)}&nbsp;&nbsp;
                                     账期截止日: {:substr($order.pay_date,0,10)}
                                 </td>
                             </tr>
@@ -172,7 +172,7 @@
                                             {/if}
                                         </p>
                                         <p class='spec' >物料规格: 无</p>
-                                        <p class='comment' >买家留言: {$order.buyer_comment}</p>
+                                        <p class='comment' >买家留言: {:htmlspecialchars($order.buyer_comment)}</p>
                                         {if $order.delivery_time > 0} <p>交货日期: {:date('Y-m-d',$order.delivery_time)}</p>{/if}
                                     </div>
 
@@ -183,10 +183,10 @@
                                 <td style="vertical-align: middle">{:getOrderState($order.state,1)}</td>
                                 <td style="vertical-align: middle">
                                     {if $order.state == 0} <!-- 待核价-->
-                                    <a href="javascript:void(0)" data-id="{$order.id}"  data-date="{if $order.delivery_time > 0}{:date('Y-m-d',$order.delivery_time)}{/if}"   data-price="{$order.sum_money}"  class="btn btn-sm btn-primary" data-toggle="modal" data-target="#pricing-modal">核价</a>
+                                    <a href="javascript:void(0)" data-id="{$order.id}"    data-price="{$order.sum_money}"  class="btn btn-sm btn-primary" data-toggle="modal" data-target="#pricing-modal">核价</a>
                                     <a href="javascript:void(0)" data-id="{$order.id}" class="btn btn-sm btn-danger" data-toggle="modal" data-target="#cancel-modal">取消订单</a>
                                     {elseif $order.state == 1}<!-- 待签约-->
-                                    <a href="javascript:void(0)" data-id="{$order.id}" data-date="{if $order.delivery_time > 0}{:date('Y-m-d',$order.delivery_time)}{/if}" class="btn btn-sm btn-primary" data-toggle="modal" data-target="#sign-modal">签约</a>
+                                    <a href="javascript:void(0)" data-id="{$order.id}"  class="btn btn-sm btn-primary" data-toggle="modal" data-target="#sign-modal">签约</a>
                                     <a href="javascript:void(0)" data-id="{$order.id}" class="btn btn-sm btn-danger" data-toggle="modal" data-target="#cancel-modal">取消订单</a>
                                     {elseif $order.state == 2}<!-- 待采购商打款-->
                                     <a href="javascript:void(0)" data-id="{$order.id}" class="btn btn-sm btn-primary" data-tag ="1" data-toggle="modal" data-target="#remittance-modal" >收款</a>
@@ -221,6 +221,9 @@
                                     {/if}
                                     {/if}
                                     {if $order.state != 13 && $order.state != 4}
+                                    {if $order.state !=1 && $order.state != 2 && $order.is_account_period == 1}
+                                    <a href="javascript:void(0)" data-id="{$order.id}" class="btn btn-sm btn-dark" data-toggle="modal" data-target="#pay-day-modal">账期设置</a>
+                                    {/if}
                                     <a href="javascript:void(0)" data-id="{$order.id}" class="btn btn-sm btn-success" data-toggle="modal" data-target="#adjustPrice-modal">调价</a>
                                     {/if}
                                 </td>
@@ -274,8 +277,12 @@
                                     </div>
                                 </div>
                                 <div class="form-group form-inline date_container">
-                                    <label class="col-md-3">账期截止</label>
-                                    <input type="date" class="form-control" name="pay_date" min="" />
+                                    <label class="col-md-3">账期支付</label>
+                                    <select class="form-control " name="is_account_period">
+                                        <option  value="0">否</option>
+                                        <option  value="1">是</option>
+                                    </select>
+
                                 </div>
                             </form>
                         </div>
@@ -308,9 +315,12 @@
                                     <label class="col-md-3">合同编号</label>
                                     <input type="text" class="form-control col-md-5" name="contract_number" placeholder="">
                                 </div>
-                                <div class="form-group form-inline">
-                                    <label class="col-md-3">账期截止</label>
-                                    <input type="date" class="form-control col-md-5" name="pay_date" min="">
+                                <div class="form-group form-inline date_container">
+                                    <label class="col-md-3">账期支付</label>
+                                    <select class="form-control " name="is_account_period">
+                                        <option  value="0">否</option>
+                                        <option  value="1">是</option>
+                                    </select>
                                 </div>
                             </form>
                         </div>
@@ -474,7 +484,6 @@
         </div>
     </div>
 </div>
-
 <!--调价 -->
 <div class="modal fade" id="adjustPrice-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-lg" role="document">
@@ -511,18 +520,56 @@
                 </div>
             </div>
             <div class="modal-footer">
-                <span class="pull-left">订单合计：<span id="adjust-total-show">0.00</span> 元</span>
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">关闭</button>
-                <button type="button" class="btn btn-primary" data-id="" id="adjust-price-request">确定</button>
+                <div class="" style="width: 100%">
+                    <div class="col-md-12">
+                        <span class="pull-left">订单合计：<span id="adjust-total-show">0.00</span> 元</span>
+                        <button type="button" class="btn btn-primary pull-right" data-id="" id="adjust-price-request"  style="margin-left: 15px">确定</button>
+                        <button type="button" class="btn btn-secondary pull-right" data-dismiss="modal">关闭</button>
+
+                    </div>
+                </div>
             </div>
         </div>
     </div>
 </div>
+<!--账期设置 -->
+<div class="modal fade" id="pay-day-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">账期设置</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body ">
+                <div class="container-fluid">
+                    <div class="row">
+                        <div class="col-md-12">
+                            <form role="form" class="" id="pay-day-form">
+                                <div class="form-group form-inline date_container">
+                                    <label class="col-md-3">账期截止</label>
+                                    <input type="date" class="form-control" name="pay_date" min="{:date('Y-m-d')}" />
+                                    <code class="error" style="color:#a94442;"></code>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">关闭</button>
+                <button type="button" class="btn btn-primary" data-id="" id="pay-day-request">确定</button>
+            </div>
+        </div>
+    </div>
+</div>
+
 {include file="layout/footer" title="$title" keywords="" /}
 <script id="price-template" type="text/html">
     {{each goods_list as goods}}
     <tr data-id="{{goods.id}}">
-        <td><img src="{{ goods.iconPath}}" /> {{goods.title}}</td><td>{{goods.s_info}}</td>
+        <td><img src="{{ goods.iconPath}}"  width="45px" /> {{goods.title}}</td><td>{{goods.s_info}}</td>
         <td>
             <input type="number" min="0.0000"  placeholder="0.0000"  name="goods[{{goods.id}}][price]"   step="0.001"  value="{{goods.price}}" class="form-control price" />
             <code class="error" style="color:#a94442;"></code>
@@ -597,7 +644,6 @@
         var id = $(event.relatedTarget).data('id');
         var date = $(event.relatedTarget).data('date');
         $("#sign-request").data('id',id);
-        $(this).find('input[name="pay_date"]').attr('min',date);
     });
     $("#sign-form").bootstrapValidator({
         excluded:[":disabled"],
@@ -964,7 +1010,6 @@
         });
     });
 
-
     $('#adjust-price-request').click(function () {
         //清楚
         $("#adjust-price-body").find('tr>td').each(function () {
@@ -977,7 +1022,7 @@
             var price = $(this).val();
             var re = /^([0-9]*)+(.[0-9]{1,3})?$/
             if(!re.test(price)){
-                $(this).closest('td').find('code').html('格式不正确');
+                $(this).closest('td').find('code').html('请填写正确格式或三位小数');
                 validate = false;
             }
         });
@@ -1009,7 +1054,7 @@
         var price = $(this).closest('tr').find('.price').val();
         var quantity = $(this).closest('tr').find('.quantity').val();
         var total = (price * quantity).toFixed(3);
-        $(this).closest('tr').find('.total').val(parseFloat(total));
+        $(this).closest('tr').find('.total').val(total);
         updateTotal();
     });
     var updateTotal = function () {
@@ -1019,4 +1064,37 @@
         });
         $("#adjust-total-show").html(total.toFixed(3));
     }
+    //账期设置
+    $('#pay-day-modal').on('show.bs.modal', function (event) {
+        var id = $(event.relatedTarget).data('id');
+        $("#pay-day-request").data('id',id);
+    });
+    $('#pay-day-request').click(function () {
+        //清除
+        $('#pay-day-modal').find('.error').html('');
+        var date = $('#pay-day-modal').find('input[name="pay_date"]').val();
+        if(!date){
+            $('#pay-day-modal').find('.error').html('日期不能为空');
+            return;
+        }
+
+        var id = $(this).data('id');
+        if(id < 0){
+            return;
+        }
+        $.ajax({
+            type: 'post',
+            url: '?s=admin/order/setPayday&id=' + id,
+            data: {date:date},
+            dataType: 'json',
+            success: function (data) {
+                if (data.status == 0) {
+                    window.location.reload();
+                } else {
+                    alert(data.msg);
+                }
+            }
+        });
+    });
+
 </script>
