--- a/web/application/admin/view/layout/left.html
+++ b/web/application/admin/view/layout/left.html
@@ -63,7 +63,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="{:url('admin/type/index')}" class="nav-link">
+                            <a href="{:url('admin/product_category/index')}" class="nav-link">
                                 <i class="fa fa-cubes nav-icon"></i>
                                 <p>全站商品分类</p>
                             </a>
