后台类型规格修改

--- a/web/application/admin/view/product_category/index.html
+++ b/web/application/admin/view/product_category/index.html
@@ -64,7 +64,7 @@
                                 <td><input class="form-control sort" id="s1" size="10" type="number"  value="{$type.sequence}"></td>
                                 <td><span class="text-success">{$type.display == '1' ? '是' : '否'}</span></td>
                                 <td>
-                                    <a class="btn btn-sm btn-warning" href="{:url('admin/type_option/index','id='.$type.id)}">规格</a>
+                                    <a class="btn btn-sm btn-warning" href="{:url('admin/spec_category/index','id='.$type.id)}">规格</a>
                                     <a class="btn btn-sm btn-info" href="{:url('admin/product_category/edit','id='.$type.id)}">编辑</a>
                                     <a class="btn btn-sm btn-danger" href="javascript:void(0)" data-id="{$type.id}" data-toggle="modal" data-target="#delete-modal">删除</a>
                                     {if $type.level == 0 || $type.level == 1}
